Added basic CSS

--- a/tests/tests/styles/styles.css
+++ b/tests/tests/styles/styles.css
@@ -3,6 +3,44 @@
     line-height: 1.5em;
 }
 
+main p {
+    width: 80%;
+    margin: 0 auto;
+}
+
+img {
+    width: 80%;
+    display: block;
+    margin: 50px auto;
+}
+
+
+
+a {
+    font-size: 1.5em;
+}
+
+h1 {
+    text-align: center;
+}
+
+nav, footer {
+    text-align: center;
+    background-color: steelblue;
+    color: white;
+    padding: 10px;
+}
+
+a:hover {
+    background-color: white;
+    color: steelblue;
+}
+
+footer p {
+    font-size: 20px;
+    margin: 20px auto;
+}
+
 #active {
     background-color: white;
     color: steelblue;
