--- a/tests/tests/styles/styles.css
+++ b/tests/tests/styles/styles.css
@@ -8,20 +8,27 @@ main p {
     margin: 0 auto;
 }
 
+body {
+    margin: 0
+}
+
 img {
     width: 80%;
     display: block;
     margin: 50px auto;
+    border: 4px solid steelblue;
 }
 
 
 
 a {
     font-size: 1.5em;
+    padding: 25px;
 }
 
 h1 {
     text-align: center;
+    margin: 50px 0;
 }
 
 nav, footer {
@@ -39,9 +46,16 @@ a:hover {
 footer p {
     font-size: 20px;
     margin: 20px auto;
+     background-color: steelblue;
+    color: white;
+    padding: 25px;
 }
 
 #active {
     background-color: white;
     color: steelblue;
+}
+
+nav {
+    padding: 25px;
 }
