--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -27,17 +27,26 @@ h4 {
 /* Header */
 header {
     background-color: #325939;
+    display: grid;
+    grid-template-columns: 150px auto;
 }
 
 .logo {
     width: 80px;
+    border-radius: 40px;
 }
 
 #logo_link {
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 
 /* Nav bar */
+nav {
+    display: flex;
+    justify-content: space-around;
+}
 nav a {
     text-align: center;
     color: white;
@@ -51,8 +60,27 @@ nav a:hover{
 }
 
 /* Hero */
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
 #hero-msg h1, #hero-msg h4 {
     text-align: center;
+     color: white;
+}
+
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
 }
 
 .home-title {
@@ -72,7 +100,7 @@ nav a:hover{
 
 /* Sign up */
 .book, .join {
-    background-color: #325939;
+    background-color: #4c6d4a;
     color: white;
     text-decoration: none;
     font-size: 18px;
@@ -102,8 +130,52 @@ nav a:hover{
     padding-top: 10px;
 }
 
+.home-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+
+/* Card Images */
+
 .card-img {
     border: 10px solid #325939;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #28492e;
+}
+
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+
+.card-img, .mountains {
+    width: 100%;
+}
+
+.rivers-card {
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+
+.camping-card {
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+
+.rapids-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+
+#background {
+    grid-column: 1/11;
+    grid-row: 4/9;
+}
+
+.mountains {
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #1f3a24
 }
 
 main section {
@@ -116,9 +188,12 @@ main section img {
 
 /* More then thrill box */
 .msg {
-    background-color: #4c6d4a;
+    background-color: #325939;
     line-height: 1.5em;
     padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #1f3a24
 }
 
 .msg h2 {
@@ -138,6 +213,9 @@ footer {
     color: white;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 footer p {
@@ -156,4 +234,50 @@ footer a:hover {
 
 footer .social img {
     padding-top: 15px;
+}
+
+/* Media Query */
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    #hero-msg h1 {
+        color: #6f7364;
+    }
+    .home-title {
+        font-size: 25px;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
