--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -281,3 +281,94 @@ footer .social img {
         margin-top: 25px;
     }
 }
+
+
+
+/* Rivers page styling*/
+
+.rivers-msg {
+    background-color: #325939;
+    padding: 20px;
+}
+
+.rivers-msg h3 {
+    font-family: 'Roboto', 'Arial', 'sans-serif';
+}
+
+.rivers-msg p {
+    font-size: .9em;
+    font-family: 'Crimson text', 'Arial', 'sans-serif';
+}
+
+
+/* Salmon River section*/
+#salmon {
+    background-color: #4c6d4a;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr ;
+    grid-row: 1/2;
+    margin-top: -8px;
+}
+
+#salmon img {
+    width: 100%;
+    grid-column: 1/3;
+    z-index: 1;
+    grid-row: 1/4;
+    padding: 20px;
+}
+
+#salmon .rivers-msg {
+    grid-column: 2/4;
+    color: white;
+    z-index: 2;
+    grid-row: 2/3;
+    margin: 10px;
+}
+
+/* Utah section*/
+#utah {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr ;
+    grid-row: 1/2;
+}
+
+#utah img {
+    width: 100%;
+    grid-column: 2/4;
+    z-index: 1;
+    grid-row: 1/4;
+    padding: 20px;
+}
+
+#utah .rivers-msg {
+    grid-column: 1/3;
+    color: white;
+    z-index: 2;
+    grid-row: 2/3;
+    margin: 10px;
+}
+
+/* Grand Canyon Section*/
+#grand {
+    background-color: #4c6d4a;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr ;
+    grid-row: 1/2;
+}
+
+#grand img {
+    width: 100%;
+    grid-column: 1/3;
+    z-index: 1;
+    grid-row: 1/4;
+    padding: 20px;
+}
+
+#grand .rivers-msg {
+    grid-column: 2/4;
+    color: white;
+    z-index: 2;
+    grid-row: 2/3;
+    margin: 10px;
+}
