--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -289,6 +289,7 @@ footer .social img {
 .rivers-msg {
     background-color: #325939;
     padding: 20px;
+    box-shadow: 5px 5px 10px #1f3a24
 }
 
 .rivers-msg h3 {
@@ -315,7 +316,7 @@ footer .social img {
     grid-column: 1/3;
     z-index: 1;
     grid-row: 1/4;
-    padding: 20px;
+    padding: 30px;
 }
 
 #salmon .rivers-msg {
@@ -338,7 +339,7 @@ footer .social img {
     grid-column: 2/4;
     z-index: 1;
     grid-row: 1/4;
-    padding: 20px;
+    padding: 30px;
 }
 
 #utah .rivers-msg {
@@ -362,7 +363,7 @@ footer .social img {
     grid-column: 1/3;
     z-index: 1;
     grid-row: 1/4;
-    padding: 20px;
+    padding: 30px;
 }
 
 #grand .rivers-msg {
