--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -316,7 +316,8 @@ footer .social img {
     grid-column: 1/3;
     z-index: 1;
     grid-row: 1/4;
-    padding: 30px;
+    margin: 30px;
+    box-shadow: 5px 5px 10px #1f3a24
 }
 
 #salmon .rivers-msg {
@@ -335,11 +336,12 @@ footer .social img {
 }
 
 #utah img {
-    width: 100%;
+    width: 95%;
     grid-column: 2/4;
     z-index: 1;
     grid-row: 1/4;
-    padding: 30px;
+    margin: 30px;
+    box-shadow: 5px 5px 10px #1f3a24
 }
 
 #utah .rivers-msg {
@@ -363,7 +365,8 @@ footer .social img {
     grid-column: 1/3;
     z-index: 1;
     grid-row: 1/4;
-    padding: 30px;
+    margin: 30px;
+    box-shadow: 5px 5px 10px #1f3a24
 }
 
 #grand .rivers-msg {
