--- a/haynieprints/styles/site-plan.css
+++ b/haynieprints/styles/site-plan.css
@@ -15,15 +15,15 @@ Fonts are separated by a | */
   --paragraph-font: Overpass, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #396E94;  /* headlines on a white background */ 
+  --headline-color-on-white: black;  /* headlines on a white background */ 
   --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
+  --paragraph-color-on-white: black; /* paragraph text on a white background */ 
   --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #396E94  ;
-  --nav-link-color: #396E94;
-  --nav-background-color: #D4AC0D;
+  --paragraph-background-color: #5c677d  ;
+  --nav-link-color: white;
+  --nav-background-color: #004e89;
   --nav-hover-link-color: white;
-  --nav-hover-background-color: #396E94;
+  --nav-hover-background-color: #015798;
 }
 
 
@@ -115,7 +115,7 @@ nav a {
   min-width: 120px;
   text-decoration: none;
   padding: 10px;
-
+  
 }
 nav a:link, nav a:visited {
   color: var(--nav-link-color);
