--- a/haynieprints/styles/styles.css
+++ b/haynieprints/styles/styles.css
@@ -43,7 +43,7 @@ nav {
 }
 
 nav a {
-    color: white;
+    color: rgb(219, 209, 209);
     text-decoration: none;
     font-size: 1.5em;
     padding: 35px 40px;
@@ -52,19 +52,19 @@ nav a {
 
 nav a:hover{
     background-color: #1262a0;
-    color: white;
+    color: rgb(219, 209, 209);
 }
 
 /**Footer**/
 footer {
     background-color: #004e89;
     display: grid;
-    grid-template-columns: 1fr fr 1fr;
+    grid-template-columns: 1fr 1fr;
 }
 
 footer p {
     grid-column: 1/2;
-    color: white;
+    color: rgb(219, 209, 209);
     padding: 10px;
 }
 
@@ -86,13 +86,8 @@ footer p {
 
 footer a:hover{
     background-color: #1262a0;
-    color: white;
+    color: rgb(219, 209, 209);
 }
-
-
-
-
-
 
 
 
@@ -118,6 +113,7 @@ footer a:hover{
 #abtme img {
     grid-column: 1/2;
     box-shadow: 5px 5px 10px #767575;
+    border-radius: 20px;
 }
 
 .abtme-msg {
@@ -126,6 +122,7 @@ footer a:hover{
     padding: 20px;
     margin: 20px;
     box-shadow: 5px 5px 10px #767575;
+    border-radius: 20px;
 }
 
 .abtme-msg h2 {
@@ -155,6 +152,7 @@ footer a:hover{
     width: 75%;
     align-self: center;
     box-shadow: 5px 5px 10px #767575;
+    border-radius: 20px;
 }
 
 .contact-p + p{
@@ -204,3 +202,119 @@ button {
 .moveDown {
     margin-top: 3em;
 }
+
+
+/*Process page*/
+/*process hero*/
+#process-hero {
+    text-align: center;
+    margin: 20px;
+}
+
+
+#glue-card {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    background-color: #767575;
+    margin: 50px auto;
+}
+
+#glue-card img {
+    margin: 50px auto;
+    width: 50%;
+    grid-column: 1/3;
+    border-radius: 10px;
+    box-shadow: 5px 5px 10px #343434;
+}
+
+#glue-card .p-card-msg {
+    grid-column: 3/5;
+    padding: 20px;
+    margin: 20px;
+    background-color: #004e89;
+    color: rgb(219, 209, 209);
+    border-radius: 10px;
+    box-shadow: 5px 5px 10px #343434;
+}
+
+#sand-card {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    margin: 50px auto;
+}
+
+#sand-card img {
+    margin: 50px auto;
+    width: 50%;
+    grid-column: 3/5;
+    border-radius: 10px;
+    box-shadow: 5px 5px 10px #767575;
+}
+
+#sand-card .p-card-msg {
+    grid-column: 1/3;
+    padding: 20px;
+    margin: 20px;
+    background-color: #004e89;
+    color: rgb(219, 209, 209);
+    border-radius: 10px;
+    box-shadow: 5px 5px 10px #767575;
+}
+
+#paint-card {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    background-color: #767575;
+    margin: 50px auto;
+}
+
+#paint-card img {
+    margin: 50px auto;
+    width: 50%;
+    grid-column: 1/3;
+    border-radius: 10px;
+    box-shadow: 5px 5px 10px #343434;
+}
+
+#paint-card .p-card-msg {
+    grid-column: 3/5;
+    padding: 20px;
+    margin: 20px;
+    background-color: #004e89;
+    color: rgb(219, 209, 209);
+    border-radius: 10px;
+    box-shadow: 5px 5px 10px #343434;
+}
+
+#weather-card {
+display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    margin: 50px 20px;
+}
+
+#weather-card img {
+    margin: 50px auto;
+    width: 100%;
+    border-radius: 10px;
+    box-shadow: 5px 5px 10px #767575;
+}
+
+#weather-card .unweather {
+    grid-column: 1/2;
+}
+
+#weather-card .weather {
+    grid-column: 4/5;
+}
+
+#weather-card .p-card-msg {
+    grid-column: 2/4;
+    padding: 20px;
+    margin: 20px;
+    background-color: #004e89;
+    color: rgb(219, 209, 209);
+    border-radius: 10px;
+    box-shadow: 5px 5px 10px #767575;
+}
+
+
